--- a/b4.html
+++ b/b4.html
@@ -15,4 +15,4 @@ body {
 }
 </style>
 
-Received award  &emsp;<span style="color:#4285F4">&#9898;</span> in 6 years  &emsp;<span style="color:#003A9B">&#9898;</span> in 8 years
+Received award  &emsp;<span style="color:#4285F4">&#x2022;</span> in 6 years  &emsp;<span style="color:#003A9B">&#x2022;</span> in 8 years
