--- a/b5.html
+++ b/b5.html
@@ -15,4 +15,4 @@ body {
 }
 </style>
 
-Received award  &emsp;<span style="color:#4285F4">&#x2022;</span> in 6 years  &emsp;<span style="color:#003A9B">&#x2022;</span> in 8 years
+Received award  &emsp;<span style="color:#4285F4; font-size:300%;">&#x2022;</span> in 6 years  &emsp;<span style="color:#003A9B; font-size:300%;">&#x2022;</span> in 8 years
