--- a/b7.html
+++ b/b7.html
@@ -16,3 +16,5 @@ body {
 </style>
 
 Received award  &emsp;<span style="color:#4285F4; font-size:300%; vertical-align: -20%;">&#x2022;</span> in 6 years  &emsp;<span style="color:#003A9B; font-size:300%; vertical-align: -20%;">&#x2022;</span> in 8 years
+<br>
+Received award  &emsp;<span style="color:#4285F4;">&#9899;</span> in 6 years  &emsp;<span style="color:#003A9B;">&#9899;</span> in 8 years
