--- a/b9.html
+++ b/b9.html
@@ -15,6 +15,4 @@ body {
 }
 </style>
 
-Received award  &emsp;<span style="color:#4285F4; font-size:270%; vertical-align: middle; line-height: 0;">&#x2022;</span> in 6 years  &emsp;<span style="color:#003A9B; font-size:270%;  vertical-align: middle; line-height: 0;">&#x2022;</span> in 8 years
-<br>
-Received award  &emsp;<span style="color:#4285F4;">&#9899;</span> in 6 years  &emsp;<span style="color:#003A9B;">&#9899;</span> in 8 years
+<div class="AJ9skf"><div class="fh9n1c"><div class="l7Dnce"><div class="M7cHtd"><div class="OHZQtf"><div class="OZxGT" style="font-weight:bold">$94,200</div><div class="NWi0Qb"></div><div class="ncUYbc" style="background-color:#4285F4;height:120px"></div></div><div class="rSeCkb"><div class="OZxGT">$38,900</div><div class="NWi0Qb">US median</div><div class="ncUYbc" style="background-color:#003A9B;height:49px"></div></div></div></div><div class="l7Dnce uLzwQc">Median income of federal financial aid recipients, 10 years after enrolling at this institution</div></div><div class="fh9n1c owjQWb"><div class="AePGQb"><a href="https://support.google.com/websearch?p=college_search&amp;sa=X&amp;ved=0ahUKEwi2uei92MjdAhX5HTQIHUCJDXYQv4MDCGIoADAR" target="_blank"><span class="lE5T9">Source: US Dept of Education (College Scorecard)&nbsp;·&nbsp;Learn more</span></a></div></div></div
