--- a/b9.html
+++ b/b9.html
@@ -15,4 +15,50 @@ body {
 }
 </style>
 
-<div class="ptcLIOszQJu__card-body_"><div class="mod-sa_ qxsd knowledge-module__add-bottom-space-when-collapsed_ knowledge-module__add-bottom-space-when-expanded_ mod" data-md="397" data-hveid="CAsQCA" data-ved="2ahUKEwj376j12cjdAhUNSLYJHSGiACkQ7YADMBF6BAgLEAg"><!--m--><div class="pTmFUVg7Fg7__container_"><div class="pTmFUVg7Fg7__section_"><div class="pTmFUVg7Fg7__line_"><div class="pTmFUVg7Fg7__outer_"><div class="pTmFUVg7Fg7__left_"><div class="pTmFUVg7Fg7__value_" style="font-weight:bold">$94,200</div><div class="pTmFUVg7Fg7__label_"></div><div class="pTmFUVg7Fg7__bar_" style="background-color:#4285F4;height:120px"></div></div><div class="pTmFUVg7Fg7__right_"><div class="pTmFUVg7Fg7__value_">$38,900</div><div class="pTmFUVg7Fg7__label_">US median</div><div class="pTmFUVg7Fg7__bar_" style="background-color:#003A9B;height:49px"></div></div></div></div><div class="pTmFUVg7Fg7__line_ pTmFUVg7Fg7__section-footer_">Median income of federal financial aid recipients, 10 years after enrolling at this institution</div></div><div class="pTmFUVg7Fg7__section_ pTmFUVg7Fg7__divider-top_"><div class="pTmFUVg7Fg7__attribution_"><a href="https://support.google.com/websearch?p=college_search&amp;sa=X&amp;sqi=2&amp;pjf=1&amp;ved=2ahUKEwj376j12cjdAhUNSLYJHSGiACkQv4MDKAAwEXoECAsQCQ" target="_blank"><span class="pTmFUVg7Fg7__gray_">Source: US Dept of Education (College Scorecard)&nbsp;·&nbsp;Learn more</span></a></div></div></div><!--n--></div></div
+
+<div>
+<div class="fCZGIcpIHxm__section_ fCZGIcpIHxm__sub-section-header_">
+<div class="fCZGIcpIHxm__line_">Typical annual income
+</div>
+</div>
+<style>.pTmFUVg7Fg7__attribution_{color:#70757A;font-size:12px;line-height:16px;padding:0 8px}.pTmFUVg7Fg7__container_{line-height:18px}.pTmFUVg7Fg7__divider-top_{border-top:1px solid #DFE1E5}.pTmFUVg7Fg7__gray_{color:#70757A}.pTmFUVg7Fg7__line_{padding:8px}.pTmFUVg7Fg7__section_{padding:8px}.pTmFUVg7Fg7__section-footer_{color:#70757A;font-size:12px;line-height:16px;padding-top:4px}
+</style>
+<div class="pTmFUVg7Fg7__container_">
+<div class="pTmFUVg7Fg7__section_">
+<div class="pTmFUVg7Fg7__line_">
+<style>.pTmFUVg7Fg7__outer_{align-items:flex-end;border-bottom:1px solid #DFE1E5;display:flex;margin-top:-8px;width:100%}.pTmFUVg7Fg7__left_{margin-left:auto;margin-right:16px;width:72px}.pTmFUVg7Fg7__right_{margin-left:16px;margin-right:auto;width:72px}
+</style>
+<div class="pTmFUVg7Fg7__outer_">
+<div class="pTmFUVg7Fg7__left_">
+<style>.pTmFUVg7Fg7__value_{font-size:14px;text-align:center}.pTmFUVg7Fg7__label_{color:#70757A;font-size:12px;text-align:center}.pTmFUVg7Fg7__bar_{border-top-left-radius:6px;border-top-right-radius:6px;margin-top:4px}
+</style>
+<div class="pTmFUVg7Fg7__value_" style="font-weight:bold">$94,200
+</div>
+<div class="pTmFUVg7Fg7__label_">
+</div>
+<div class="pTmFUVg7Fg7__bar_" style="background-color:#4285F4;height:120px">
+</div>
+</div>
+<div class="pTmFUVg7Fg7__right_">
+<div class="pTmFUVg7Fg7__value_">$38,900
+</div>
+<div class="pTmFUVg7Fg7__label_">US median
+</div>
+<div class="pTmFUVg7Fg7__bar_" style="background-color:#003A9B;height:49px">
+</div>
+</div>
+</div>
+</div>
+<div class="pTmFUVg7Fg7__line_ pTmFUVg7Fg7__section-footer_">Median income of federal financial aid recipients, 10 years after enrolling at this institution
+</div>
+</div>
+<div class="pTmFUVg7Fg7__section_ pTmFUVg7Fg7__divider-top_">
+<div class="pTmFUVg7Fg7__attribution_">
+<a href="https://support.google.com/websearch?p=college_search&amp;sa=X&amp;ved=0ahUKEwiA19C02sjdAhUNSLYJHSGiACkQv4MDCPsDMAA" target="_blank">
+<span class="pTmFUVg7Fg7__gray_">Source: US Dept of Education (College Scorecard)&nbsp;·&nbsp;Learn more
+</span>
+</a>
+</div>
+</div>
+</div>
+</div
