--- a/b6.html
+++ b/b6.html
@@ -26,10 +26,18 @@ body {
 <div class="pTmFUVg7Fg7__container_">
 <div class="pTmFUVg7Fg7__section_">
 <div class="pTmFUVg7Fg7__line_">
-<style>.pTmFUVg7Fg7__outer_{align-items:flex-end;border-bottom:1px solid #DFE1E5;display:flex;margin-top:-8px;width:100%}.pTmFUVg7Fg7__left_{margin-left:auto;margin-right:16px;width:72px}.pTmFUVg7Fg7__right_{margin-left:16px;margin-right:auto;width:72px}
+<style>.bar {
+      display: inline-block;
+      vertical-align: bottom;
+      width: 72px;
+}
+.pTmFUVg7Fg7__outer_{align-items:flex-end;border-bottom:1px solid #DFE1E5;display:flex;margin-top:-8px;width:100%;text-align:center}
+.pTmFUVg7Fg7__left_{margin-left:auto;margin-right:16px}
+.pTmFUVg7Fg7__right_{margin-left:16px;margin-right:auto}
+
 </style>
 <div class="pTmFUVg7Fg7__outer_">
-<div class="pTmFUVg7Fg7__left_">
+<div class="pTmFUVg7Fg7__left_ bar">
 <style>.pTmFUVg7Fg7__value_{font-size:14px;text-align:center}.pTmFUVg7Fg7__label_{color:#70757A;font-size:12px;text-align:center}.pTmFUVg7Fg7__bar_{border-top-left-radius:6px;border-top-right-radius:6px;margin-top:4px}
 </style>
 <div class="pTmFUVg7Fg7__value_" style="font-weight:bold">$94,200
@@ -39,7 +47,7 @@ body {
 <div class="pTmFUVg7Fg7__bar_" style="background-color:#4285F4;height:120px">
 </div>
 </div>
-<div class="pTmFUVg7Fg7__right_">
+<div class="pTmFUVg7Fg7__right_ bar">
 <div class="pTmFUVg7Fg7__value_">$38,900
 </div>
 <div class="pTmFUVg7Fg7__label_">US median
@@ -53,12 +61,6 @@ body {
 </div>
 </div>
 <div class="pTmFUVg7Fg7__section_ pTmFUVg7Fg7__divider-top_">
-<div class="pTmFUVg7Fg7__attribution_">
-<a href="https://support.google.com/websearch?p=college_search&amp;sa=X&amp;ved=0ahUKEwiA19C02sjdAhUNSLYJHSGiACkQv4MDCPsDMAA" target="_blank">
-<span class="pTmFUVg7Fg7__gray_">Source: US Dept of Education (College Scorecard)&nbsp;·&nbsp;Learn more
-</span>
-</a>
-</div>
 </div>
 </div>
 </div
