--- a/b5.html
+++ b/b5.html
@@ -27,11 +27,9 @@ body {
 <div class="pTmFUVg7Fg7__section_">
 <div class="pTmFUVg7Fg7__line_">
 <style>.bar {
-      display: inline-block;
-      vertical-align: bottom;
       width: 72px;
 }
-.pTmFUVg7Fg7__outer_{align-items:flex-end;border-bottom:1px solid #DFE1E5;display:flex;margin-top:-8px;width:100%;text-align:center}
+.pTmFUVg7Fg7__outer_{align-items:flex-end;border-bottom:1px solid #DFE1E5;display:flex;margin-top:-8px;width:100%}
 .pTmFUVg7Fg7__left_{margin-left:auto;margin-right:16px}
 .pTmFUVg7Fg7__right_{margin-left:16px;margin-right:auto}
 
